minor fix to prev: Add vertical-align:top to .hx_text to eliminate gap above .strip

--- a/web/resume.css
+++ b/web/resume.css
@@ -231,6 +231,7 @@ tt {
 }
 .hx_text {
 	display: inline-block;
+	vertical-align: top;
 	margin: 0px;
 }
 
